--- a/R_workbook.ipynb
+++ b/R_workbook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGjLNdgk33WJWX+uYqB4W6",
+      "authorship_tag": "ABX9TyNKHZgJQV2DbcvIpKVZAh5P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,9 +65,7 @@
     {
       "cell_type": "code",
       "source": [
-        "iris\n",
-        "iris4 <- iris[, 1:4]\n",
-        "iris4"
+        "iris"
       ],
       "metadata": {
         "colab": {
@@ -75,9 +73,9 @@
           "height": 1000
         },
         "id": "s1V0nWbos4HZ",
-        "outputId": "7e6a36b7-6917-40b5-bae1-5c1e9d539347"
+        "outputId": "1a572410-df9c-4f86-ef77-db261a496ed0"
       },
-      "execution_count": 5,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -222,7 +220,25 @@
             ]
           },
           "metadata": {}
-        },
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "iris4 <- iris[, 1:4]\n",
+        "iris4"
+      ],
+      "metadata": {
+        "id": "9mFdsW1avNxX",
+        "outputId": "753ebbec-7f3a-45e3-99e4-9e63c948bffc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
         {
           "output_type": "display_data",
           "data": {
